k8s-objects/grafana/oncall/mysql.yaml
# https://kubernetes.io/docs/tasks/run-application/run-single-instance-stateful-application/, though note we have to
# change the image to be runnable on ARM64
apiVersion: v1
kind: Service
metadata:
  name: mysql-grafana-oncall
  namespace: grafana
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-grafana-oncall
  namespace: grafana
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: arm64v8/mysql
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: grafana-oncall-pvc
        - name: init
          configMap:
            name: oncall-mysql-init
