k8s-objects/grafana/oncall/ingress.yaml
# It seems that trying to set up the Ingress as provided by the Helm chart results in port clashes, so I'm setting it
# up manually.
#
# Remember you'll also need to create a DNS record to point to the K3s cluster
#
# TODO: Not sure why the ability to set an ingressClassName was commented out
# (https://github.com/grafana/oncall/blob/7deb6fb9206f7372be36c7f0c1e06880dbe83772/helm/oncall/values.yaml#L53, though
# note that this is incorrectly spelled - it should be `ingressClassName`, not `className`) - will follow up with the
# Oncall devs later.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-oncall
  namespace: grafana
spec:
  ingressClassName: traefik
  rules:
    # TODO: If I was setting up a full professional-quality setup, this would be a Helm value.
    - host: oncall.grafana.avril
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oncall-engine
                port:
                  number: 8080
